--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* Añadir estilos personalizados para la barra de desplazamiento */
+@layer utilities {
+    .scrollbar-thin::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+  
+    .scrollbar-thin::-webkit-scrollbar-thumb {
+      background-color: white;
+      border-radius: 9999px; /* Redondea completamente la perilla */
+    }
+  
+    .scrollbar-thin::-webkit-scrollbar-track {
+      background: transparent; /* Pista transparente */
+    }
+  
+    .scrollbar-thin:hover::-webkit-scrollbar-thumb {
+      background-color: #d1d5db; /* Color gris claro cuando se pasa el ratón */
+    }
+  }
+  
